# aweme-algorithm

./: .gitignore  README.md
API/: main.go
API/Test/: Func_test.go
API/model/: aweme.go
API/units/: aweme.go  bridge.h  config.go  router.go  utils.go
aweme-aes/: CMakeLists.txt  hexstring.cpp  main.cpp  main.h  subs.cpp  subs.h
ios_aweme_lib/awemeLib/: awemeLib.h  awemeLib.m
ios_aweme_lib/awemeLib.xcodeproj/: project.pbxproj
ios_aweme_lib/awemeLib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios_webserver/: awemeDylib.h  awemeDylib.m
